--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "gsap": "^3.11.3",
+    "i18next": "^22.0.6",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-gsap": "^3.2.1",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^12.0.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
